--- a/static/friends/sass/components/_my-friends_and_my-receiver.sass
+++ b/static/friends/sass/components/_my-friends_and_my-receiver.sass
@@ -7,6 +7,7 @@ main.my-network
       @include flex-el(start, null)
       flex-direction: column
       gap: 1rem
+      align-items: center
       // border: 1px solid #fff
 
       .container-list-my-friends-profiles
