--- a/static/friends/sass/components/_nav-statistic.sass
+++ b/static/friends/sass/components/_nav-statistic.sass
@@ -23,7 +23,7 @@ main.my-network
         border-left-color: $color3
         border-left-style: solid
         border-left-width: 4px
-        padding-left: 0.7rem
+        padding-left: 12px
 
         span.text
           &:hover
