--- a/static/friends/sass/components/_to-invites.sass
+++ b/static/friends/sass/components/_to-invites.sass
@@ -14,6 +14,7 @@ main.my-network
       display: grid
       grid-template-columns: repeat(auto-fill, minmax(180px, 1fr))
       grid-gap: 1rem
+      justify-items: center
 
       .container-list-to-invites-profiles
         // margin-bottom: 1.5rem
