--- a/static/notifications/sass/components/_notifications.sass
+++ b/static/notifications/sass/components/_notifications.sass
@@ -32,6 +32,7 @@
       align-items: center
       position: relative
       transition: background-color 0.2s ease-in-out
+      cursor: pointer
       &:hover
         background-color: $color6
 
