--- a/static/chat/sass/components/_list_chatroom.sass
+++ b/static/chat/sass/components/_list_chatroom.sass
@@ -1,6 +1,7 @@
 a.my-friends-info-link
   width: 100%
   padding: 2px 0.2rem
+  transition: background-color 0.2s ease-in-out
   &:hover
     background-color: $color6
   .my-friends-info-container
