--- a/static/components/css/style.css
+++ b/static/components/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, footer .footer-content .footer-content-box .footer-logo, .hamburger-nav-profil, .nav-profil .drop-down-list, .nav-profil .nav-box-profil, .nav-profil, .nav-text, nav ul a, a.logo {
+.flex-center, .spinner-loader, footer .footer-content .footer-content-box .footer-logo, .hamburger-nav-profil, .nav-profil .drop-down-list, .nav-profil .nav-box-profil, .nav-profil, .nav-text, nav ul a, a.logo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -491,6 +491,31 @@ footer .footer-bottom a {
 }
 footer .footer-bottom a:hover {
   color: #1abc9c;
+}
+
+.container-main {
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner-loader {
+  width: 35px;
+  height: 35px;
+}
+.spinner-loader::after {
+  content: "";
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: 4px solid #1abc9c;
+  border-top-color: transparent;
+  animation: spinner 1.2s linear infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
