--- a/templates/friends/mynetwork.html
+++ b/templates/friends/mynetwork.html
@@ -38,7 +38,9 @@
     {% endif %}
 
     {% if page == "my_friends" %}
-    {% include 'friends/components/list_myfriends.html' %}
+    <div class="my-friends-container">
+      {% include 'friends/components/list_myfriends.html' %}
+    </div>
     {% endif %}
 
     {% if page == "invitation_received" %}
@@ -62,7 +64,13 @@
 
 {% if page == "list_not_friends" %}
 <script>
-  paginatorWithAjax("", ".to-invites-container", "{{ csrf_token }}", 150)
+  paginatorWithAjax("", ".to-invites-container", ".to-invites-container", "{{ csrf_token }}", 150)
+</script>
+{% endif %}
+
+{% if page == "my_friends" %}
+<script>
+  paginatorWithAjax("", ".my-friends-container", ".my-friends-container", "{{ csrf_token }}", 150)
 </script>
 {% endif %}
 {% endblock js %}
