--- a/static/comments/sass/components/_comment.sass
+++ b/static/comments/sass/components/_comment.sass
@@ -184,3 +184,8 @@
           button[disabled]
             cursor: not-allowed
             opacity: 0.4
+  .voir-plus
+    color: $color3
+    cursor: pointer
+    &:hover
+      text-decoration: underline
