--- a/static/chat/css/style.css
+++ b/static/chat/css/style.css
@@ -322,8 +322,8 @@ a.my-friends-info-link .my-friends-info-container .my-friends-info div#link-prof
   position: relative;
 }
 a.my-friends-info-link .my-friends-info-container .my-friends-info div#link-profile-user img.my-friends-img-profile {
-  width: 4.5rem;
-  height: 4.5rem;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   border: 3px solid #34495e;
   background-color: #34495e;
