--- a/static/chat/sass/components/_list_chatroom.sass
+++ b/static/chat/sass/components/_list_chatroom.sass
@@ -20,8 +20,8 @@ a.my-friends-info-link
       div#link-profile-user
         position: relative
         img.my-friends-img-profile
-          width: 4.5rem
-          height: 4.5rem
+          width: 50px
+          height: 50px
           border-radius: 50%
           border: 3px solid $color4
           background-color: $color4
