--- a/templates/users/sign_in.html
+++ b/templates/users/sign_in.html
@@ -42,7 +42,7 @@
       <input type="submit" value="Se connecter">
       <div class="sign_link">
         Vous n'avez pas de compte ? <a href="{% url 'sign_up' %}">S'inscrire</a>
-        <p>Revenir au page <a href="{% url 'home:home' %}">d'acceuil</a></p>
+        <p>Revenir à la page <a href="{% url 'home:home' %}">d'd'accueil</a></p>
       </div>
     </form>
   </div>
