--- a/templates/users/sign_up.html
+++ b/templates/users/sign_up.html
@@ -49,7 +49,7 @@
       <input type="submit" value="S'inscrire">
       <div class="sign_link">
         Vous avez déjà un compte ? <a href="{% url 'sign_in' %}">S'identifier</a>
-        <p>Revenir au page <a href="{% url 'home:home' %}">d'acceuil</a></p>
+        <p>Revenir à la page <a href="{% url 'home:home' %}">d'accueil</a></p>
       </div>
     </form>
   </div>
