fixed : when we click on a received notification it brings us back to the home page but it is empty

--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -25,7 +25,7 @@
   <div class="container-left">
     {% include 'post/components/left.html' %}
   </div>
-  <div class="container-main">
+  <div class="container-main" style="{% if page == 'detail' %} justify-content: start; {% endif %}" >
     {% if page == 'detail' %}
 
     {% include 'post/components/post-detail.html' %}
