--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -20,7 +20,7 @@
     <img id="container1-img" src="{% static 'home/svg/img-home.svg' %}">
     <div class="content">
       <h1>Bienvenue dans votre réseau social professionnel</h1>
-      <h3>Veuillez vous connecter si vous avez déjà un compte ou vous s'inscrire si vous n'avez pas de compte.</h3>
+      <h3>Veuillez vous connecter si vous avez déjà un compte ou vous inscrire si vous n'avez pas de compte.</h3>
     </div>
   </div>
 
@@ -28,13 +28,13 @@
     <div class="box box1">
       <img src="{% static 'home/svg/img-home2.svg' %}">
       <h4>
-        Connectez-vous avec des bonnes personnes
+        Connectez-vous avec de bonnes personnes
       </h4>
     </div>
     <div class="box box2">
       <img src="{% static 'home/svg/img-home3.svg' %}">
       <h4>
-        Booster et enrichir votre profil
+        Boostez et enrichissez votre profil
       </h4>
     </div>
   </div>
