google social auth integration

--- a/static/users/sass/utils/_global.sass
+++ b/static/users/sass/utils/_global.sass
@@ -2,7 +2,8 @@ body
   background-color: $color2
   color: $color1
   min-height: 100vh
-  background: linear-gradient(120deg, #2980b9, #8e44ad)
+  // background: linear-gradient(120deg, #2980b9, #8e44ad)
+  background: linear-gradient(120deg, $color1, $color4)
   @extend .flex-center
   font-family: $font1
 
