--- a/static/users/sass/utils/_settings.sass
+++ b/static/users/sass/utils/_settings.sass
@@ -4,13 +4,25 @@
 
 $font1: 'Poppins', sans-serif
 
-$color1: #333333
+// $color1: #333333
+// $color2: #f1f1f1
+// $color3: #adadad
+// $color4: #666666
+// $color5: #a6a6a6
+// $color7: #8e44ad
+
+$color1: #2c3e50
 $color2: #f1f1f1
-$color3: #adadad
-$color4: #666666
-$color5: #a6a6a6
-$color6: #2691d9
-$color7: #8e44ad
+$color3: #1abc9c
+$color4: #34495e
+$color5: #3238373f
+$color6: #0000001a
+$color7: #979eaa
+$color8: #f31d58
+$color9: #CCCCCC
+$color10: #1abc9c40
+$color11: #f31d5a49
+$color12: #2691d9
 
 *, ::after, ::before
     box-sizing: border-box
