--- a/static/users/sass/pages/_forms_sign_up_sign_in.sass
+++ b/static/users/sass/pages/_forms_sign_up_sign_in.sass
@@ -13,13 +13,61 @@
       margin-top: 10px
       padding: 1rem
 
+.social-auth-container
+  padding: 0 40px
+  margin: .5rem 0
+  @extend .flex-center
+  flex-direction: column
+  gap: 8px
+  .btn-link
+    width: 100%
+    @extend .flex-center
+    gap: 8px
+    padding: 0.5rem 1rem
+    background: $color4
+    border-radius: 10px
+    cursor: pointer
+    transition: 0.5s
+    &:hover
+      background: rgba($color4, 0.7)
+      transition: 0.5s
+    img
+      width: 25px
+      height: 25px
+
+.sep
+  margin: 1.5rem 0 .5rem
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 100%
+  // max-width: 460px
+  height: 10px
+  position: relative
+  hr
+    background-color: $color7
+    height: 1px
+    width: 100%
+    // max-width: 460px
+    border: none
+    outline: none
+  span
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    @extend .flex-center
+    width: 35px
+    background-color: $color2
+    color: $color7
+
 form
   padding: 0 40px
 
   .txt_field
     position: relative
-    border-bottom: 2px solid $color3
-    margin: 30px 0 10px
+    border-bottom: 2px solid $color4
+    margin: 20px 0 10px
 
     input
       width: 100%
@@ -34,7 +82,7 @@ form
       position: absolute
       top: 50%
       left: 5px
-      color: $color3
+      color: $color4
       transform: translateY(-50%)
       font-size: 16px
       pointer-events: none
@@ -47,13 +95,13 @@ form
       left: 0
       width: 0%
       height: 2px
-      background: $color6
+      background: $color4
       transition: 0.5s
 
     input:focus ~ label,
     input:valid ~ label
       top: -5px
-      color: $color6
+      color: $color4
 
     input:focus ~ .span-border-bottom::before,
     input:valid ~ .span-border-bottom::before
@@ -66,6 +114,7 @@ form
       border-radius: 50px
       visibility: hidden
       transition: 0.3s
+  
 
   .content-error
     margin-bottom: 20px
@@ -95,7 +144,7 @@ form
     width: 100%
     height: 50px
     border: 1px solid
-    background: linear-gradient(120deg, $color6, $color7)
+    background: linear-gradient(120deg, $color4, $color3)
     border-radius: 25px
     font-size: 18px
     color: $color2
@@ -104,7 +153,7 @@ form
     outline: none
 
   input[type="submit"]:hover
-    border-color: $color6
+    border-color: $color4
     transition: 0.5s
 
   .sign_link
@@ -114,7 +163,7 @@ form
     color: $color4
 
     a
-      color: $color6
+      color: $color12
       text-decoration: none
       &:hover
         text-decoration: underline
@@ -125,13 +174,13 @@ form
     visibility: visible
 
   .progressBlue
-    background: $color6
+    background: $color4
     width: 67%
     visibility: visible
 
   .progressGreen
     width: 100%
-    background: $color6
+    background: $color4
     visibility: visible
 
 .sign_link
@@ -141,7 +190,7 @@ form
   color: $color4
 
   a
-    color: $color6
+    color: $color4
     text-decoration: none
     &:hover
       text-decoration: underline
