--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
 
 {% block style %}
 <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 {% endblock style %}
 
-{% block title %} Réinitialisation du mot de passe {% endblock title %}
+{% block title %} {% translate "Réinitialisation du mot de passe" %} {% endblock title %}
 
 {% block content %}
 <div class="form-container">
   <div class="title-form">
-    <h3>Réinitialisation du mot de passe</h3>
-    <p class="p-info">Mot de passe oublié ? Entrez votre adresse email ci-dessous et nous vous enverrons par e-mail des
-      instructions pour en définir une nouvelle.</p>
+    <h3>{% translate "Réinitialisation du mot de passe" %}</h3>
+    <p class="p-info">{% translate "Mot de passe oublié ? Entrez votre adresse email ci-dessous et nous vous enverrons
+      par e-mail des instructions pour en définir une nouvelle." %}</p>
   </div>
 
   <form method="POST" entity="multipart/form-data">{% csrf_token %}
@@ -27,7 +28,7 @@
     <span class="content-error"></span>
     <input type="submit" value="Envoyer">
     <div class="sign_link">
-      <p>Revenir au page <a href="{% url 'home:home' %}">d'acceuil</a></p>
+      <p><a href="{% url 'home:home' %}">{% translate "Revenir à la page d'accueil" %}</a></p>
     </div>
   </form>
 </div>
