--- a/templates/users/password_reset_done.html
+++ b/templates/users/password_reset_done.html
@@ -1,24 +1,23 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/m' %} " type="image/x-icon">
+<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon">
 <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 {% endblock style %}
 
-{% block title %} Réinitialisation du mot de passe {% endblock title %}
+{% block title %} {% translate "Réinitialisation du mot de passe envoyée" %} {% endblock title %}
 
 {% block content %}
 <div class="form-container-pass">
   <div class="title-pass">
-    <h3>Réinitialisation du mot de passe envoyée</h3>
-    <p class="p-info">Nous vous avons envoyé par email des instructions pour définir votre mot de passe, si un compte
-      existe avec l'e-mail que vous avez saisi. Vous devriez les recevoir sous peu.
+    <h3>{% translate "Réinitialisation du mot de passe envoyée" %}</h3>
+    <p class="p-info">{% translate "Nous vous avons envoyé par email des instructions pour définir votre mot de passe, si un compte existe avec l'e-mail que vous avez saisi. Vous devriez les recevoir sous peu." %}
       <br>
       <br>
-      Si vous ne recevez pas d'e-mail, assurez-vous d'avoir entré l'adresse avec laquelle vous vous êtes inscrit et
-      vérifiez votre dossier spam.
+      {% translate "Si vous ne recevez pas d'e-mail, assurez-vous d'avoir entré l'adresse avec laquelle vous vous êtes inscrit et vérifiez votre dossier spam." %}
     </p>
   </div>
 </div>
