--- a/templates/users/password_reset_form.html
+++ b/templates/users/password_reset_form.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
 
 {% block style %}
@@ -7,14 +8,14 @@
 <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 {% endblock style %}
 
-{% block title %} Entrez un nouveau mot de passe {% endblock title %}
+{% block title %} {% translate "Entrez un nouveau mot de passe" %} {% endblock title %}
 
 {% block content %}
 <div class="form-container">
   <div class="title-form">
-    <h3>Entrez un nouveau mot de passe</h3>
-    <p class="p-info">Veuillez entrer votre nouveau mot de passe deux fois afin que nous puissions vérifier que vous
-      l'avez saisi correctement.</p>
+    <h3>{% translate "Entrez un nouveau mot de passe" %}</h3>
+    <p class="p-info">{% translate "Veuillez entrer votre nouveau mot de passe deux fois afin que nous puissions
+      vérifier que vous l'avez saisi correctement." %}</p>
   </div>
 
   <forM method="POST" entity="multipart/form-data">{% csrf_token %}
@@ -22,20 +23,20 @@
       <div class="txt_field">
         {{ form.new_password1 }}
         <span class="span-border-bottom"></span>
-        <label>Nouveau mot de passe *</label>
+        <label>{% translate "Nouveau mot de passe" %} *</label>
       </div>
     </div>
     <div class="confirm_password-container">
       <div class="txt_field">
         {{ form.new_password2 }}
         <span class="span-border-bottom"></span>
-        <label>Confirmer le nouveau mot de passe *</label>
+        <label>{% translate "Confirmer le nouveau mot de passe" %} *</label>
       </div>
     </div>
     <span class="content-error"></span>
     <input type="submit" value="Envoyer">
     <div class="sign_link">
-      <p>Revenir au page <a href="{% url 'home:home' %}">d'acceuil</a></p>
+      <p><a href="{% url 'home:home' %}">{% translate "Revenir à la page d'accueil" %}</a></p>
     </div>
 </div>
 </forM>
