--- a/templates/users/password_reset_send.html
+++ b/templates/users/password_reset_send.html
@@ -7,16 +7,16 @@
 <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 {% endblock style %}
 
-{% block title %} Réinitialisation du mot de passe terminée {% endblock title %}
+{% block title %} {% translate "Réinitialisation du mot de passe terminée" %} {% endblock title %}
 
 {% block content %}
 <div class="form-container">
   <div class="title-form">
-    <h3>Réinitialisation du mot de passe terminée</h3>
-    <p class="p-info">Votre mot de passe a été bien défini. Vous pouvez continuer et vous connecter maintenant.</p>
+    <h3>{% translate "Réinitialisation du mot de passe terminée" %}</h3>
+    <p class="p-info">{% translate "Votre mot de passe a été bien défini. Vous pouvez continuer et vous connecter maintenant." %}</p>
   </div>
   <div class="sign_link">
-    <p><a href="{% url 'sign_in' %}">Connexion</a></p>
+    <p><a href="{% url 'sign_in' %}">{% translate "Se connecter" %}</a></p>
   </div>
 </div>
 {% endblock content %}
