--- a/static/users/sass/pages/_forms_sign_up_sign_in.sass
+++ b/static/users/sass/pages/_forms_sign_up_sign_in.sass
@@ -1,13 +1,17 @@
 .form-container
-  width: 400px
+  width: 100%
+  max-width: 460px
   background: $color2
   border-radius: 10px
   box-shadow: 0 0 5px $color4
-  margin: 1.5rem 0
+  // margin: 1.5rem 0
+  @media screen and (max-width: 500px)
+    height: 100%
+    width: 100%
 
   .title-form
     text-align: center
-    padding: 15px 0
+    padding: 8px 0
     border-bottom: 1px solid silver
     .p-info
       margin-top: 10px
@@ -63,7 +67,9 @@
 
 form
   padding: 0 40px
-
+  @media screen and (max-width: 500px)
+    padding: 0 20px
+  
   .txt_field
     position: relative
     border-bottom: 2px solid $color4
