--- a/static/users/sass/utils/_global.sass
+++ b/static/users/sass/utils/_global.sass
@@ -6,9 +6,20 @@ body
   background: linear-gradient(120deg, $color1, $color4)
   @extend .flex-center
   font-family: $font1
+  @media screen and (max-width: 500px)
+    height: 100%
+    width: 100%
+
+.body-container
+  @media screen and (max-width: 500px)
+    height: 100%
+    width: 100%
 
 main
   @extend .flex-center
+  @media screen and (max-width: 500px)
+    height: 100%
+    width: 100%
 
 .message-success
   margin: 1rem
