--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,6 +29,8 @@
   {% block footer %} {% endblock footer %}
 
   <!-- Javascript -->
+  {% get_current_language as LANGUAGE_CODE %}
+  <input type="text" id="language_code" value="{{ LANGUAGE_CODE }}" hidden>
   {% block js %} {% endblock js %}
 </body>
 
