--- a/templates/friends/components/invitation-send.html
+++ b/templates/friends/components/invitation-send.html
@@ -2,6 +2,7 @@
 {% load humanize %}
 {% load cloudinary %}
 {% load chat %}
+{% load i18n %}
 
 
 <div class="my-friends-container">
@@ -41,7 +42,7 @@
       <form action="{% url 'friends:cancel_invitation' %}" method="POST" class="my-friends-add-friends">
         {% csrf_token %}
         <input type="hidden" name="profile_id" value="{{obj.receiver.id}}">
-        <button class="btn-add-friends btn-rejected-invitation" type="submit">Retirer</button>
+        <button class="btn-add-friends btn-rejected-invitation" type="submit">{% translate 'Retirer' %}</button>
       </form>
     </div>
   </div>
