--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
 
 {% block title %} Home {% endblock title %}
@@ -19,8 +20,8 @@
   <div class="container1">
     <img id="container1-img" src="{% static 'home/svg/img-home.svg' %}">
     <div class="content">
-      <h1>Bienvenue dans votre réseau social professionnel</h1>
-      <h3>Veuillez vous connecter si vous avez déjà un compte ou vous inscrire si vous n'avez pas de compte.</h3>
+      <h1>{% translate "Bienvenue dans votre réseau social professionnel" %}</h1>
+      <h3>{% translate "Veuillez vous connecter si vous avez déjà un compte ou vous inscrire si vous n'avez pas de compte." %}</h3>
     </div>
   </div>
 
@@ -28,13 +29,13 @@
     <div class="box box1">
       <img src="{% static 'home/svg/img-home2.svg' %}">
       <h4>
-        Connectez-vous avec de bonnes personnes
+        {% translate "Connectez-vous avec de bonnes personnes" %}
       </h4>
     </div>
     <div class="box box2">
       <img src="{% static 'home/svg/img-home3.svg' %}">
       <h4>
-        Boostez et enrichissez votre profil
+        {% translate "Boostez et enrichissez votre profil" %}
       </h4>
     </div>
   </div>
