--- a/templates/profiles/update.html
+++ b/templates/profiles/update.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load cloudinary %}
+{% load i18n %}
 
 
 {% block title %} Update profil {{profile.user.first_name}} {{profile.user.last_name}} {% endblock title %}
@@ -19,7 +20,7 @@
 <main class="main-profile-update">
 
   <div class="update-porfile-container">
-    <h2>Modifier votre profil</h2>
+    <h2>{% translate 'Modifier le profil' %}</h2>
 
     <form action="" method="POST" enctype="multipart/form-data" class="form-profile-update">
       {% csrf_token %}
