--- a/templates/home/components/navbar-home.html
+++ b/templates/home/components/navbar-home.html
@@ -1,6 +1,18 @@
 {% load static %}
 {% load i18n %}
 
+{% get_current_language as LANGUAGE_CODE %}
+
+<style>
+  @media screen and (max-width: 500px) {
+    .nav-text-span {
+      display: none;
+    }
+  }
+    
+  
+</style>
+
 <div class="nav-container">
   <div>
     <a class="logo logo1" href="{% url 'home:home' %}" style="color: #1abc9c">
@@ -8,7 +20,7 @@
     </a>
   </div>
   <div>
-    <nav style="padding-right: 30px">
+    <nav style="padding-right: 15px">
       <ul class="nav-menu">
         {% if not user.is_authenticated %}
         <a href="{% url 'sign_in' %}" class="nav-item">
@@ -23,6 +35,13 @@
             <img class="nav-img" src="{% static 'home/svg/signup.svg' %}" alt="">
             <span class="animation {% if start_animation == 'sign_up' %}start-animation{% endif %}"></span>
             <span>{% translate 'Inscription' %}</span>
+          </div>
+        </a>
+        <a href="/{% if LANGUAGE_CODE == 'fr' %}en{% else %}fr{% endif %}/" class="nav-item">
+          <div class="nav-text">
+            <img class="nav-img" src="{% static 'home/svg/language.svg' %}" alt="">
+            <span class="animation {% if start_animation == 'sign_up' %}start-animation{% endif %}"></span>
+            <!-- <span>{% translate 'Inscription' %}</span> -->
           </div>
         </a>
         {% endif %}
