--- a/templates/users/components/btn-social-auth.html
+++ b/templates/users/components/btn-social-auth.html
@@ -9,7 +9,7 @@
     <img class="ml" src="{% static 'home/svg/google.svg' %}" alt="Compte google">
     <span>{% translate "Continue avec" %} Google</span>
   </a>
-  <a href="{% provider_login_url 'facebook' method='js_sdk' %}" id="github" class="btn-link">
+  <a href="{% provider_login_url 'facebook' method='oauth2' %}" id="github" class="btn-link">
     <img class="ml" src="{% static 'home/svg/facebook.svg' %}" alt="Compte facebook">
     <span>{% translate "Continue avec" %} Facebook</span>
   </a>
